syntax = "proto3";

package auth;
option go_package = "github.com/danilluk1/social-network/grpc/auth";
import "google/protobuf/timestamp.proto";

service Auth {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
}

message User {
  string username = 1;
  string full_name = 2;
  string email = 3;
  google.protobuf.Timestamp password_changed_at = 4;
  google.protobuf.Timestamp created_at = 5;
}

message CreateUserRequest {
  string username = 1;
  string full_name = 2;
  string email = 3;
  string password = 4;
}

message CreateUserResponse {
  User user = 1;
}